# rules_dotnet_memory_deps

./: BUILD.bazel  SomeServerTest.cs  WORKSPACE  nuget2config.json  rules_dotnet_nuget2bazel_buffers.patch
